[JVMCI] EnableJVMCI should only be required when its not implied by other flags

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b131

      The -XX:+EnableJVMCI option 1) unlocks code paths in the VM related to JVMCI and 2) is required to unlock all other JVMCI options. However, 1 could be achieved by specific JVMCI options without requiring 2. Since JVMCI is experimental, these options already require -XX:+UnlockExperimentalVMOptions. Having to unlock them twice is redundant and makes for unnecessarily long command lines. For example:

      java -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI -XX:+UseJVMCICompiler ...

      could be:

      java -XX:+UnlockExperimentalVMOptions -XX:+UseJVMCICompiler ...

      The following flags should automatically unlock the JVMCI code paths:

      UseJVMCICompiler
      JVMCITraceLevel
      JVMCICounterSize
      JVMCICountersExcludeCompiler
      JVMCIUseFastLocking
      JVMCINMethodSizeLimit
      TraceUncollectedSpeculations

      The only consistency checking that should remain is for the JVMCI flags related to the VM using JVMCI as its top tier compiler. These flags should require -XX:+UseJVMCICompiler:

      BootstrapJVMCI
      PrintBootstrap
      JVMCIThreads
      JVMCIHostThreads

            Assignee:
            Douglas Simon
            Reporter:
            Douglas Simon
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: