8161265: [JVMCI] EnableJVMCI should only be required when its not implied by other flags

Reviewed-by: twisti, kvn, never